# wgpu_test

./: Cargo.toml  Trunk.toml  index.html
public/: main.js
src/: circle.rs  instance.rs  keyevent.rs  lib.rs  osu.rs  shader.wgsl  state.rs  texture.rs  uniforms.rs  vertex.rs
src/audio/: audio_manager.rs  mod.rs
