[package]
name = "wgpu_test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wgpu_test_app"
path = "src/lib.rs"


[dependencies]
winit = "0.28.0"
env_logger = "0.11"
log = "0.4.20"
wgpu = "0.18"
pollster = "0.3.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
image = { version = "0.24.7", default-features = false, features = ["png", "jpeg"]}
anyhow = "1.0.44"
cgmath = "0.18.0"
cfg-if = "1"
cpal = { version = "0.15.2" }
hound = "3.5.1"
egui = "0.25.0"
egui_wgpu_backend = "0.27.0"
egui-winit = "0.25.0"
creak = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.18", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
